--- a/input.css
+++ b/input.css
@@ -62,6 +62,52 @@ body {
   margin-right: 30px;
 }
 
+#resultInfo {
+  width:300px;
+  height:400px;
+  position:absolute;
+  display: inline-block;
+  left:50%;
+  margin-left:-150px;
+  z-index:5;
+}
+
+.resultInfoTitle {
+  width:300px;
+  height:50px;
+}
+
+.resultInfoTitle p {
+  color:white;
+  font-family: Consolas;
+  font-size:20px;
+  text-align: center;
+  margin:0;
+  padding:10px;
+}
+
+#bigTitle {
+  height:50px;
+}
+
+#smallTitle {
+  height : 30px;
+}
+
+#sdiAmount, #distAmount {
+  width:300px;
+  height:40px;
+}
+
+#sdiAmount p, #distAmount p {
+  color:white;
+  font-family: Consolas;
+  font-size:14px;
+  text-align: center;
+  margin:0;
+  padding:10px;
+}
+
 #buttonContainer {
   float:left;
   margin-left:30px;
